--- a/templates/page.html
+++ b/templates/page.html
@@ -18,7 +18,7 @@
                 {% if pseudo %}
                     <br>
                     <br>
-                    <a href="/modifpage">Modifier votre page</a>
+                    <a href="/modifpage/{{page_number}}">Modifier votre page</a>
                 {% endif %}
             </div>
         </div>
